[package]
name = "agave-dashboard-agent"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
axum = { workspace = true, features = ["ws"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }

[lints]
workspace = true
